--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,12 @@
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/next-starter"
 
+# Auth options
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
